<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sound Wringer</string>
    <string name="app_description">Sound Wringer - Ringtone Profiles</string>
    <string name="app_version">v%s</string>
    <string name="about_title">About Sound Wringer</string>
    <string name="about_text">\n
      <b>Original Source by</b>\n
      <u>M. Wiggins</u>\n\n

      <b>Published by</b>\n
      <u>Hlidskialf Software</u>\n\n
      No warranty of any kind provided.
    </string>

    <string name="profilechooser_label">Choose Wringer Profile</string>

    <string name="preferences">Preferences</string>
    <string name="about">About</string>

    <string name="edit">Edit profile</string>
    <string name="delete">Delete profile</string>
    <string name="apply">Apply profile</string>


    <string name="choose_title">Which tone type?</string>
    <string name="choose_ringtone">Choose Ringtone</string>
    <string name="choose_notifytone">Choose Notifytone</string>

    <string name="incoming_sms">Received SMS</string>
    <string name="reply">Reply</string>
    <string name="mark_read">Mark as Read</string>

    <string name="seconds"> Seconds</string>


    <!-- profile preferences -->
    <string name="profile_prefs_cat">Profile Settings</string>
    <string name="name">Profile Name</string>
    <string name="brightness">Screen Brightness</string>
    <string name="screen_timeout">Screen Timeout</string>
    <string name="autosync_on">Auto-Sync</string>
    <string name="autosync_on_summary_on">Synchronize online data</string>
    <string name="autosync_on_summary_off">Don't Auto-Sync data</string>

    <string name="profile_prefs_cat_audio">Audio Settings</string>
    <string name="profile_prefs_cat_volume">Volume Levels</string>
    <string name="profile_prefs_cat_volume_summary">Volume and vibrate settings</string>
    <string name="alarm_vol">Alarm Volume</string>
    <string name="music_vol">Music Volume</string>
    <string name="notify_vol">Notification Volume</string>
    <string name="ringer_vol">Ringer Volume</string>
    <string name="system_vol">System Sounds Volume</string>
    <string name="voice_vol">Call Volume</string>
    <string name="ringer_mode">Silent Mode</string>
    <string name="ringer_vibrate">Ringer Vibrate</string>
    <string name="ringer_vibrate_summary_on">Vibrate on incoming ring</string>
    <string name="ringer_vibrate_summary_off">Don't vibrate on incoming ring</string>
    <string name="notify_vibrate">Notification Vibrate</string>
    <string name="notify_vibrate_summary_on">Vibrate on notification</string>
    <string name="notify_vibrate_summary_off">Don't vibrate on notification</string>
    <string name="play_soundfx">Play Sound Effects</string>
    <string name="play_soundfx_summary_on">Play system keypress sound effects</string>
    <string name="play_soundfx_summary_off">No system keypress sound effects</string>

    <string name="profile_prefs_cat_devices">Device Settings</string>
    <string name="airplane_on">Airplane Mode</string>
    <string name="airplane_on_summary_on">All radios off</string>
    <string name="airplane_on_summary_off">Don't force radios off</string>
    <string name="profile_prefs_cat_radio">Radio Settings</string>
    <string name="profile_prefs_cat_radio_summary">Wifi/Bluetooth/GPS Settings</string>
    <string name="wifi_on">Wi-Fi</string>
    <string name="wifi_on_summary_on">Wi-Fi on</string>
    <string name="wifi_on_summary_off">Wi-Fi off</string>
    <string name="gps_on">GPS</string>
    <string name="gps_on_summary_on">GPS on</string>
    <string name="gps_on_summary_off">GPS off</string>
    <string name="location_on">Wireless Location</string>
    <string name="location_on_summary_on">Wireless Location on</string>
    <string name="location_on_summary_off">Wireless Location off</string>
    <string name="bluetooth_on">Bluetooth</string>
    <string name="bluetooth_on_summary_on">Bluetooth on</string>
    <string name="bluetooth_on_summary_off">Bluetooth off</string>

    <string name="profile_prefs_cat_tone">Ringtones</string>
    <string name="ringtone">Default Ring Tone</string>
    <string name="notifytone">Default Notification Tone</string>
    <string name="profile_prefs_cat_contacts">Contact Ringtones</string>
    <string name="profile_prefs_cat_contacts_summary">Customize ringtones per contact</string>


    <!-- ringer modes -->
    <string name="ringer_mode_normal">Normal: Audible and may vibrate</string>
    <string name="ringer_mode_vibrate">Vibrate: Muted but vibrates</string>
    <string name="ringer_mode_silent">Silent: Muted and no vibration</string>


    <!-- wringer preferences -->
    <string name="pref_widget_cat">Widget Preferences</string>
    <string name="pref_widget_icon_app_title">Widget app icon</string>
    <string name="pref_widget_icon_app_summary_on">App icon shown</string>
    <string name="pref_widget_icon_app_summary_off">App icon not shown</string>
    <string name="pref_widget_icon_gps_title">Widget GPS icon</string>
    <string name="pref_widget_icon_gps_summary_on">GPS toggle button shown</string>
    <string name="pref_widget_icon_gps_summary_off">GPS toggle button not shown</string>
    <string name="pref_widget_icon_3g_title">Widget 3G icon</string>
    <string name="pref_widget_icon_3g_summary_on">3G toggle button shown</string>
    <string name="pref_widget_icon_3g_summary_off">3G toggle button not shown</string>

    <string name="pref_sms_cat">SMS Popup Preferences</string>
    <string name="pref_sms_popup_cat">SMS Popup Preferences</string>
    <string name="pref_sms_popup_title">SMS popup dialog</string>
    <string name="pref_sms_popup_summary_on">Show popup dialog on SMS</string>
    <string name="pref_sms_popup_summary_off">Don't show popup dialog on SMS</string>
    <string name="pref_sms_popup_autohide_title">SMS popup hide timeout</string>
    <string name="pref_sms_popup_autohide_summary">Seconds to wait before hiding popup</string>
    <string name="pref_sms_popup_wakeup_title">SMS wakeup</string>
    <string name="pref_sms_popup_wakeup_summary_on">Wakeup phone on SMS</string>
    <string name="pref_sms_popup_wakeup_summary_off">Don't wakeup phone on SMS</string>

    <string name="pref_sms_notification_cat">SMS Notification Preferences</string>
    <string name="pref_sms_notification_title">SMS notification</string>
    <string name="pref_sms_notification_summary_on">Create a notification on SMS</string>
    <string name="pref_sms_notification_summary_off">No notification on SMS</string>
    <string name="pref_sms_notification_tone_title">SMS ringtone</string>
    <string name="pref_sms_notification_tone_summary_on">Play ringtone on SMS</string>
    <string name="pref_sms_notification_tone_summary_off">Don't play ringtone on SMS</string>
    <string name="pref_sms_notification_vibrate_title">SMS vibrate</string>
    <string name="pref_sms_notification_vibrate_summary_on">Vibrate on SMS</string>
    <string name="pref_sms_notification_vibrate_summary_off">Don't vibrate on SMS</string>
    <string name="pref_sms_notification_color_title">SMS notification LED color</string>
    <string name="pref_sms_notification_color_summary">Color of the LED on SMS</string>
</resources>
