<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory android:title="@string/pref_widget_cat">
    <CheckBoxPreference android:key="widget_show_icon_app"
      android:title="@string/pref_widget_icon_app_title"
      android:summaryOn="@string/pref_widget_icon_app_summary_on"
      android:summaryOff="@string/pref_widget_icon_app_summary_off"
      android:persistent="true"
      android:defaultValue="true"
      />
    <CheckBoxPreference android:key="widget_show_icon_gps"
      android:title="@string/pref_widget_icon_gps_title"
      android:summaryOn="@string/pref_widget_icon_gps_summary_on"
      android:summaryOff="@string/pref_widget_icon_gps_summary_off"
      android:persistent="true"
      android:defaultValue="true"
      />
    <CheckBoxPreference android:key="widget_show_icon_3g"
      android:title="@string/pref_widget_icon_3g_title"
      android:summaryOn="@string/pref_widget_icon_3g_summary_on"
      android:summaryOff="@string/pref_widget_icon_3g_summary_off"
      android:persistent="true"
      android:defaultValue="true"
      />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_sms_notification_cat">
    <CheckBoxPreference android:key="sms_notification"
      android:title="@string/pref_sms_notification_title"
      android:summaryOn="@string/pref_sms_notification_summary_on"
      android:summaryOff="@string/pref_sms_notification_summary_off"
      android:persistent="true"
      android:defaultValue="true"
      />
      <CheckBoxPreference android:key="sms_notification_tone"
        android:title="@string/pref_sms_notification_tone_title"
        android:summaryOn="@string/pref_sms_notification_tone_summary_on"
        android:summaryOff="@string/pref_sms_notification_tone_summary_off"
        android:persistent="true"
        android:dependency="sms_notification"
        android:defaultValue="true"
        />
      <CheckBoxPreference android:key="sms_notification_vibrate"
        android:title="@string/pref_sms_notification_vibrate_title"
        android:summaryOn="@string/pref_sms_notification_vibrate_summary_on"
        android:summaryOff="@string/pref_sms_notification_vibrate_summary_off"
        android:persistent="true"
        android:dependency="sms_notification"
        android:defaultValue="false"
        />
      <ListPreference android:key="sms_notification_color"
        android:title="@string/pref_sms_notification_color_title"
        android:summary="@string/pref_sms_notification_color_summary"
        android:entries="@array/notification_colors"
        android:entryValues="@array/notification_color_values"
        android:persistent="true"
        android:dependency="sms_notification"
        android:defaultValue="magenta"
        />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_sms_popup_cat">
    <CheckBoxPreference android:key="sms_popup"
      android:title="@string/pref_sms_popup_title"
      android:summaryOn="@string/pref_sms_popup_summary_on"
      android:summaryOff="@string/pref_sms_popup_summary_off"
      android:persistent="true"
      android:defaultValue="true"
      />
      <com.hlidskialf.android.preference.SeekBarPreference android:key="sms_popup_autohide"
        android:title="@string/pref_sms_popup_autohide_title"
        android:summary="@string/pref_sms_popup_autohide_summary"
        android:dependency="sms_popup"
        android:persistent="true"
        android:defaultValue="15"
        android:text=" seconds"
        />
      <CheckBoxPreference android:key="sms_popup_wakeup"
        android:title="@string/pref_sms_popup_wakeup_title"
        android:summaryOn="@string/pref_sms_popup_wakeup_summary_on"
        android:summaryOff="@string/pref_sms_popup_wakeup_summary_off"
        android:dependency="sms_popup"
        android:persistent="true"
        android:defaultValue="true"
        />
  </PreferenceCategory>

</PreferenceScreen>
