<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory android:title="@string/profile_prefs_cat">
    <EditTextPreference android:key="name"
      android:title="@string/name"
      android:maxLength="25"
      />
    <com.hlidskialf.android.wringer.TonePreference android:key="ringtone"
      android:title="@string/ringtone"
      android:showDefault="true"
      android:showSilent="true"
      />
    <com.hlidskialf.android.wringer.TonePreference android:key="notifytone"
      android:title="@string/notifytone"
      android:showDefault="true"
      android:showSilent="true"
      />
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/profile_prefs_cat_audio">
    <PreferenceScreen android:title="@string/profile_prefs_cat_volume"
                      android:summary="@string/profile_prefs_cat_volume_summary">
      <PreferenceCategory android:title="@string/profile_prefs_cat_volume"/>
      <com.hlidskialf.android.widget.SeekBarPreference android:key="alarm_vol"
        android:title="@string/alarm_vol"
        android:max="10"
        />
      <com.hlidskialf.android.widget.SeekBarPreference android:key="music_vol"
        android:title="@string/music_vol"
        android:max="10"
        />
      <com.hlidskialf.android.widget.SeekBarPreference android:key="notify_vol"
        android:title="@string/notify_vol"
        android:max="10"
        />
      <com.hlidskialf.android.widget.SeekBarPreference android:key="ringer_vol"
        android:title="@string/ringer_vol"
        android:max="10"
        />
      <com.hlidskialf.android.widget.SeekBarPreference android:key="system_vol"
        android:title="@string/system_vol"
        android:max="10"
        />
      <com.hlidskialf.android.widget.SeekBarPreference android:key="voice_vol"
        android:title="@string/voice_vol"
        android:max="10"
        />
    </PreferenceScreen>
    <CheckBoxPreference android:key="ringer_mode"
      android:title="@string/ringer_mode"
      />
    <CheckBoxPreference android:key="ringer_vibrate"
      android:title="@string/ringer_vibrate"
      android:summary="@string/ringer_vibrate_summary"
      />
    <CheckBoxPreference android:key="notify_vibrate"
      android:title="@string/notify_vibrate"
      android:summary="@string/notify_vibrate_summary"
      />
    <CheckBoxPreference android:key="play_soundfx"
      android:title="@string/play_soundfx"
      android:summary="@string/play_soundfx_summary"
      />
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/profile_prefs_cat_screen">
    <com.hlidskialf.android.widget.SeekBarPreference android:key="brightness"
      android:title="@string/brightness"
      android:max="255"
      />
    <com.hlidskialf.android.widget.SeekBarPreference android:key="screen_timeout"
      android:title="@string/screen_timeout"
      android:max="600"
      />
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/profile_prefs_cat_devices">
    <CheckBoxPreference android:key="airplane_on"
      android:title="@string/airplane_on"
      android:summary="@string/airplane_on_summary"
      />
    <PreferenceScreen android:title="@string/profile_prefs_cat_radio"
                      android:summary="@string/profile_prefs_cat_radio_summary">
      <PreferenceCategory android:title="@string/profile_prefs_cat_radio"/>
      <CheckBoxPreference android:key="wifi_on"
        android:title="@string/wifi_on"
        android:summary="@string/wifi_on_summary"
        />
      <CheckBoxPreference android:key="gps_on"
        android:title="@string/gps_on"
        android:summary="@string/gps_on_summary"
        />
      <CheckBoxPreference android:key="location_on"
        android:title="@string/location_on"
        android:summary="@string/location_on_summary"
        />
      <CheckBoxPreference android:key="bluetooth_on"
        android:title="@string/bluetooth_on"
        android:summary="@string/bluetooth_on_summary"
        />
    </PreferenceScreen>
    <CheckBoxPreference android:key="autosync_on"
      android:title="@string/autosync_on"
      android:summary="@string/autosync_on_summary"
      />
  </PreferenceCategory>
</PreferenceScreen>
